compiler/typ/tests/fixtures/diagnostics/0103_core_apply_non_function_09.ml.infer.expected
File "0103_core_apply_non_function_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0103_core_apply_non_function_09 is not a valid module name.

File "0103_core_apply_non_function_09.ml", line 3, characters 2-6:
3 |   iota 9
      ^^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
